syntax = "proto3";

message ID {
	string Value = 1;
}

message UnitState {
	ObjectState Base = 1;
	float Speed = 2;
	Vector Direction = 3;
	Vector Destignation = 4;
}

message FactoryBuildingState {
	BuildingState Base = 1;
	Vector Waypoint = 2;
	int32 Queued = 3;
	float Progress = 4;
}

message BuildingState {
	ObjectState Base = 1;
	Vector Size = 2;
}

message ObjectState {
	ID ID = 1;
	Vector Position = 2;
	float Health = 3;
	float MaxHealth = 4;
	ID PlayerID = 5;
}

message Vector {
	float X = 1;
	float Y = 2;
}

message Empty {}

message GoToRequest {
    ID UnitID = 1;
    Vector Destignation = 2;
}

message SetWaypointRequest {
    ID BuildingID = 1;
    Vector Waypoint = 2;
}

message QueueUnitRequest {
    ID BuildingID = 1;
}

message QueueUnitResult {
    bool Result = 1;
}